Add heatmap and metabolome corplot

--- a/readme.org
+++ b/readme.org
@@ -1012,12 +1012,6 @@ y <- d[keep, ,keep.lib.sizes=F ] %>%
 
 #+end_src
 
-#+RESULTS:
-: Warning message:
-: In calcNormFactors.DGEList(.) :
-:   object contains offsets, which take precedence over library
-: sizes and norm factors (and which will not be recomputed).
-
 
 - unique genes
 
@@ -1386,7 +1380,7 @@ kegg.fry %>%
   rownames_to_column('PathwayID') %>%
   mutate(PathwayID=sub('path:', '', PathwayID)) %>%
   left_join(kg.names, by="PathwayID") %>%
-  filter(PValue <= 0.05) %>%
+  filter(PValue <= 0.05 | PValue.Mixed <= 0.05) %>%
   mutate(Description = sub(' - Bos taurus \\(cow\\)', '', Description)) %>%
   ascii(format=c('s', 'd', 's', 'g' ,'g' ,'g' , 'g', 's'))
 #+end_src
@@ -1395,14 +1389,15 @@ kegg.fry %>%
 :results:
 |   | PathwayID | NGenes | Direction |  PValue |  FDR | PValue.Mixed | FDR.Mixed | Description                           |
 |---+-----------+--------+-----------+---------+------+--------------+-----------+---------------------------------------|
-| 1 | bta00515  |     21 | Up        | 0.00057 |  0.2 |         0.31 |      0.94 | Mannose type O-glycan biosynthesis    |
-| 2 | bta00562  |     67 | Down      |   0.012 | 0.99 |         0.67 |      0.94 | Inositol phosphate metabolism         |
-| 3 | bta04070  |     86 | Down      |   0.014 | 0.99 |         0.62 |      0.94 | Phosphatidylinositol signaling system |
-| 4 | bta00590  |     44 | Up        |   0.021 | 0.99 |         0.48 |      0.94 | Arachidonic acid metabolism           |
-| 5 | bta04530  |    146 | Down      |   0.027 | 0.99 |         0.53 |      0.94 | Tight junction                        |
-| 6 | bta05211  |     67 | Down      |   0.041 | 0.99 |         0.72 |      0.94 | Renal cell carcinoma                  |
+| 1 | bta00515  |     21 | Up        | 0.00057 |  0.2 |         0.31 |      0.93 | Mannose type O-glycan biosynthesis    |
+| 2 | bta00562  |     67 | Down      |   0.012 | 0.99 |         0.67 |      0.93 | Inositol phosphate metabolism         |
+| 3 | bta04070  |     86 | Down      |   0.014 | 0.99 |         0.62 |      0.93 | Phosphatidylinositol signaling system |
+| 4 | bta00590  |     44 | Up        |   0.021 | 0.99 |         0.48 |      0.93 | Arachidonic acid metabolism           |
+| 5 | bta04530  |    146 | Down      |   0.027 | 0.99 |         0.53 |      0.93 | Tight junction                        |
+| 6 | bta05211  |     67 | Down      |   0.041 | 0.99 |         0.72 |      0.93 | Renal cell carcinoma                  |
 | 7 | bta00310  |     57 | Down      |   0.048 | 0.99 |         0.85 |      0.94 | Lysine degradation                    |
-| 8 | bta04012  |     72 | Down      |    0.05 | 0.99 |         0.69 |      0.94 | ErbB signaling pathway                |
+| 8 | bta04012  |     72 | Down      |    0.05 | 0.99 |         0.69 |      0.93 | ErbB signaling pathway                |
+| 9 | bta05033  |      9 | Up        |    0.24 | 0.99 |       0.0045 |      0.93 | Nicotine addiction                    |
 :end:
 
 - bta00515 :: Mannose type O-glycan biosynthesis
@@ -1483,6 +1478,71 @@ pathview(pathway.id=pathway,
   : Info: Writing image file bta04012.pathview.png
 
   [[./bta04012.pathview.png]]
+
+
+-
+#+begin_src R :session bovine.rm :results output
+topTags(lrt, n=Inf) %>%
+  as.data.frame %>%
+  tibble::rownames_to_column("GeneID") %>%
+  filter(GeneID %in% kg.sets[['path:bta00590']]) %>%
+  left_join(desc, by="GeneID")  %>%
+  ascii(format=c('s', 'f', 'f','f', 'g', 'g', 's', 's'), digits=4)
+
+#+end_src
+
+#+RESULTS:
+#+begin_example
+|    | GeneID    | logFC   | logCPM  | LR     | PValue   | FDR | gene         | product                                                                                                                                                                     |
+|----+-----------+---------+---------+--------+----------+-----+--------------+-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
+| 1  | 286858    | 1.1112  | 8.5204  | 7.6061 | 0.005817 | 1   | PTGDS        | prostaglandin D2 synthase%2C transcript variant X2                                                                                                                          |
+| 2  | 535227    | 0.8019  | 2.3639  | 3.5224 | 0.06054  | 1   | CYP2U1       | cytochrome P450%2C family 2%2C subfamily U%2C polypeptide 1%2C transcript variant X2                                                                                        |
+| 3  | 507130    | -0.5806 | 3.7641  | 3.3302 | 0.06802  | 1   | LTA4H        | leukotriene A4 hydrolase%2C transcript variant X2                                                                                                                           |
+| 4  | 521656    | 0.9055  | -0.0322 | 3.2904 | 0.06969  | 1   | LOC521656    | cytochrome P450%2C family 2%2C subfamily J                                                                                                                                  |
+| 5  | 511936    | 0.5483  | 1.0718  | 2.9820 | 0.0842   | 1   | LOC511936    | cytochrome P450%2C family 2%2C subfamily J                                                                                                                                  |
+| 6  | 530929    | 0.3612  | 3.1444  | 2.4730 | 0.1158   | 1   | LOC530929    | cytochrome P450%2C family 2%2C subfamily J%2C transcript variant X1                                                                                                         |
+| 7  | 525072    | 0.3908  | 1.3328  | 2.3486 | 0.1254   | 1   | PLA2G4A      | phospholipase A2 group IVA                                                                                                                                                  |
+| 8  | 506508    | 0.6570  | -0.3885 | 2.1714 | 0.1406   | 1   | PLB1         | phospholipase B1%2C transcript variant X1                                                                                                                                   |
+| 9  | 511749    | 0.4498  | 0.3852  | 1.9430 | 0.1633   | 1   | LTC4S        | leukotriene C4 synthase%2C transcript variant X3                                                                                                                            |
+| 10 | 506802    | 0.3921  | 5.5354  | 1.7584 | 0.1848   | 1   | PLA2G16      | phospholipase A2%2C group XVI%2C transcript variant X4                                                                                                                      |
+| 11 | 282138    | -0.6046 | 2.0695  | 1.6322 | 0.2014   | 1   | AKR1C4       | aldo-keto reductase family 1%2C member C4 (chlordecone reductase%3B 3-alpha hydroxysteroid dehydrogenase%2C type I%3B dihydrodiol dehydrogenase 4)%2C transcript variant X1 |
+| 12 | 493638    | -0.2004 | 6.4758  | 1.5466 | 0.2136   | 1   | PTGES3       | prostaglandin E synthase 3%2C transcript variant X1                                                                                                                         |
+| 13 | 512259    | 0.6545  | 2.0802  | 1.4014 | 0.2365   | 1   | HPGD         | 15-hydroxyprostaglandin dehydrogenase                                                                                                                                       |
+| 14 | 407169    | 0.7018  | -1.3311 | 1.0332 | 0.3094   | 1   | ALOX12       | arachidonate 12-lipoxygenase%2C 12S type%2C transcript variant X1                                                                                                           |
+| 15 | 513177    | 0.5681  | 3.1144  | 0.9690 | 0.3249   | 1   | PTGR1        | prostaglandin reductase 1                                                                                                                                                   |
+| 16 | 286809    | 0.2228  | 5.3588  | 0.9191 | 0.3377   | 1   | GPX4         | glutathione peroxidase 4%2C transcript variant 1                                                                                                                            |
+| 17 | 614911    | 0.9037  | -0.4578 | 0.8132 | 0.3672   | 1   | PLA2G5       | phospholipase A2 group V%2C transcript variant X3                                                                                                                           |
+| 18 | 282022    | 0.3161  | 1.6816  | 0.7269 | 0.3939   | 1   | PTGS1        | prostaglandin-endoperoxide synthase 1%2C transcript variant X1                                                                                                              |
+| 19 | 282023    | 0.4288  | -0.0049 | 0.7241 | 0.3948   | 1   | PTGS2        | prostaglandin-endoperoxide synthase 2                                                                                                                                       |
+| 20 | 522866    | -0.5072 | -0.5486 | 0.7216 | 0.3956   | 1   | PLA2G4F      | phospholipase A2 group IVF                                                                                                                                                  |
+| 21 | 286820    | -0.8368 | 3.1206  | 0.6759 | 0.411    | 1   | ALOX15B      | arachidonate 15-lipoxygenase%2C type B                                                                                                                                      |
+| 22 | 515946    | 0.3837  | -0.6571 | 0.6507 | 0.4199   | 1   | CBR1         | carbonyl reductase 1                                                                                                                                                        |
+| 23 | 532505    | -0.1180 | 4.1969  | 0.5184 | 0.4715   | 1   | ZADH2        | zinc binding alcohol dehydrogenase domain containing 2                                                                                                                      |
+| 24 | 506263    | 0.1362  | 4.5587  | 0.4053 | 0.5243   | 1   | PTGR2        | prostaglandin reductase 2                                                                                                                                                   |
+| 25 | 787450    | 0.3625  | 1.3325  | 0.3550 | 0.5513   | 1   | ALOX12E      | arachidonate lipoxygenase%2C epidermal%2C transcript variant X1                                                                                                             |
+| 26 | 503625    | 0.6078  | -0.4654 | 0.3511 | 0.5535   | 1   | PLA2G2D4     | calcium-dependent phospholipase A2 PLA2G2D4%2C transcript variant X2                                                                                                        |
+| 27 | 615582    | 0.1687  | 7.9163  | 0.3442 | 0.5574   | 1   | GGT1         | gamma-glutamyltransferase 1%2C transcript variant X3                                                                                                                        |
+| 28 | 282019    | 0.2247  | 2.8294  | 0.2794 | 0.5971   | 1   | PTGES        | prostaglandin E synthase                                                                                                                                                    |
+| 29 | 787326    | 0.1540  | 6.6258  | 0.2489 | 0.6179   | 1   | GGT5         | gamma-glutamyltransferase 5%2C transcript variant X3                                                                                                                        |
+| 30 | 516036    | -0.1562 | 0.8531  | 0.2168 | 0.6415   | 1   | CBR3         | carbonyl reductase 3                                                                                                                                                        |
+| 31 | 509326    | -0.1989 | 0.4111  | 0.2121 | 0.6452   | 1   | TBXAS1       | thromboxane A synthase 1%2C transcript variant X1                                                                                                                           |
+| 32 | 535381    | 0.0943  | 2.3846  | 0.1546 | 0.6942   | 1   | PLA2G6       | phospholipase A2 group VI%2C transcript variant X1                                                                                                                          |
+| 33 | 618367    | 0.1372  | -0.7519 | 0.1108 | 0.7392   | 1   | LOC618367    | uncharacterized LOC618367                                                                                                                                                   |
+| 34 | 504769    | 0.2457  | 1.1698  | 0.1020 | 0.7494   | 1   | CYP2B6       | cytochrome P450 subfamily 2B                                                                                                                                                |
+| 35 | 505485    | -0.0953 | 1.4716  | 0.1018 | 0.7496   | 1   | PLA2G4B      | phospholipase A2%2C group IVB (cytosolic)%2C transcript variant X2                                                                                                          |
+| 36 | 527214    | -0.0671 | 4.6829  | 0.0938 | 0.7594   | 1   | PLA2G12A     | phospholipase A2 group XIIA                                                                                                                                                 |
+| 37 | 617001    | -0.0453 | 4.3116  | 0.0714 | 0.7893   | 1   | FAM213B      | family with sequence similarity 213 member B                                                                                                                                |
+| 38 | 527631    | -0.1404 | 1.9325  | 0.0682 | 0.794    | 1   | PLA2G3       | phospholipase A2 group III                                                                                                                                                  |
+| 39 | 282021    | 0.0857  | 1.5574  | 0.0475 | 0.8275   | 1   | PTGIS        | prostaglandin I2 synthase%2C transcript variant X1                                                                                                                          |
+| 40 | 493639    | -0.0297 | 3.1474  | 0.0131 | 0.9088   | 1   | PTGES2       | prostaglandin E synthase 2                                                                                                                                                  |
+| 41 | 404074    | 0.0347  | 0.9853  | 0.0079 | 0.9291   | 1   | ALOX5        | arachidonate 5-lipoxygenase                                                                                                                                                 |
+| 42 | 511716    | 0.0173  | 2.9042  | 0.0044 | 0.9469   | 1   | EPHX2        | epoxide hydrolase 2%2C transcript variant X1                                                                                                                                |
+| 43 | 282139    | -0.0214 | 6.9773  | 0.0013 | 0.9711   | 1   | ALOX15       | arachidonate 15-lipoxygenase%2C transcript variant X2                                                                                                                       |
+| 44 | 107132327 | 0.0060  | 1.2897  | 0.0001 | 0.9904   | 1   | LOC107132327 | cytochrome P450 2J2-like                                                                                                                                                    |
+#+end_example
+
+
+
 ** GO
   #+begin_src R :session bovine.rm :results output discard
 library(org.Bt.eg.db)
@@ -1826,7 +1886,7 @@ go.fry %>%
 :end:
 
 
-*** Heatmaps
+*** GO terms of interest gene expression
 
 #+name: interest-go.rm
 - GO:0007507 :: heart development
@@ -2058,6 +2118,58 @@ $`GO:0051302 - regulation of cell division`
 | 5 | 510141 | 17.39      | 16.40      | 23.40      | 17.63      | 17.32      | 14.15      | 14.69     | 11.56   | 18.94   | 15.08   | 12.81   | 18.76   | 20.63   | CIB1   | calcium and integrin binding 1                      |
 | 6 | 510184 | 21.50      | 18.12      | 18.12      | 29.04      | 22.47      | 21.98      | 23.95     | 20.03   | 18.79   | 26.09   | 17.26   | 16.10   | 16.25   | TADA3  | transcriptional adaptor 3%2C transcript variant X1  |
 
+*** Figure
+
+#+header: :results output file graphics :file heatmap.go.png
+#+header: :width 20 :height 10 :units in :res 150
+#+begin_src R :session bovine.rm
+counts.per.million <- cpm(y) %>%
+  as.data.frame %>%
+  rownames_to_column("GeneID")
+
+final.go.terms <- data.frame(GOID=sprintf("GO:%07d", c(60397, 9409, 1942, 42310,
+                                       140668, 51260, 50830)))
+plot.names <- go.fry %>%
+  rownames_to_column('GOID') %>%
+  left_join(go.names, by='GOID') %>%
+  right_join(final.go.terms) %>%
+  split(.$GOID)
+
+go.data <- lapply(plot.names,
+                  function(x) filter(counts.per.million,
+                                     GeneID %in% go.sets[[x$GOID]]))
+
+go.plots <- mapply(function(data, name) {
+  gather(data, -GeneID, key='sample', value='cpm') %>%
+    left_join(desc, by="GeneID")  %>%
+    mutate(group=sub("_.*", "", sample),
+           product = sub(', transcript variant X[1-9]', '', URLdecode(product))) %>%
+    ggplot(aes(sample, product, alpha=cpm, fill=group)) +
+    geom_tile(color='grey') +
+    geom_text(aes(label=sprintf("%0.1f", cpm)), alpha=1) n+
+    scale_fill_manual(values=c(WT="#cc546e", SLICK="#4db598"), labels=c(WT="Wild-Type", SLICK="SLICK")) +
+    scale_alpha_continuous() +
+    ggtitle(sprintf("%s: %s (%s)", name$GOID, name$TERM, name$Direction)) +
+    theme_minimal() +
+    theme(panel.grid = element_blank(),
+          legend.position = 'none',
+          axis.title =element_blank(),
+          axis.text.x = element_blank())
+}, go.data, plot.names, SIMPLIFY = F)
+
+library(cowplot)
+
+short.plots <- go.plots[names(go.plots) != "GO:0051260"]
+rel.heights <- sapply(go.data[names(go.data) != "GO:0051260"], nrow) + 1.5
+
+plot_grid(go.plots[["GO:0051260"]] + theme(axis.text.x=element_text(angle=45, hjust=1, vjust=1)),
+          plot_grid(plotlist=short.plots, ncol=1, rel_heights = rel.heights , align="v" ),
+          ncol=2)
+#+end_src
+
+#+RESULTS:
+[[file:heatmap.go.png]]
+
 ** Session Info
 #+begin_src R :session bovine.rm :results output verbatim
 sessionInfo()
@@ -2126,3 +2238,106 @@ loaded via a namespace (and not attached):
 #+end_example
 
 #  LocalWords:  transcriptome
+
+* Meta
+
+#+name: meta-pos
+|    | Phenacetyl-carnitine | 8-Dodecenoylcarnitine | 3-Oxohexadecanoic acid | Leucyl-Tryptophan | 18-Hydroxyarachidonic acid | Oleoylethanolamide | N-Demethyllysergic acid diethylamide | 9-Nitrooctadecenoic Acid | N-Demethylencainide | 13-Azaprostanoic acid | Prostaglandin E3 | Prostaglandin A2 | 11-Dehydro-thromboxane B2 | 20-Carboxy-leukotriene B4 | Heneicosanoic acid | N-Stearoyl phenylalanine | LysoPC(15:0/0:0) |   Swertiajaponin |  LysoPC(20:0/0:0) |   PE(14:0/P-16:0) |
+|    |                met_1 |                 met_2 |                  met_3 |             met_4 |                      met_5 |              met_6 |                                met_7 |                    met_8 |               met_9 |                met_10 |           met_11 |           met_12 |                    met_13 |                    met_14 |             met_15 |                   met_16 |           met_17 |           met_18 |            met_19 |            met_20 |
+|----+----------------------+-----------------------+------------------------+-------------------+----------------------------+--------------------+--------------------------------------+--------------------------+---------------------+-----------------------+------------------+------------------+---------------------------+---------------------------+--------------------+--------------------------+------------------+------------------+-------------------+-------------------|
+|  5 |     10.5172979899179 |      36.1788912860551 |       20.7184130315875 |  77.3399094248974 |           2.55336988640535 |   8.72379693468136 |                     38.9260100820759 |          41.624546805895 |    19.1834011621479 |      1.90494019816153 |  18.713722079198 | 15.2829688377178 |          52.4349013935745 |          15.2687521543544 |   8.32548216460397 |         18.8920227050081 |  1305.6783048135 | 293.656236621145 |  5.75306982607294 |  4.41624013749029 |
+|  6 |      3.5504907320426 |      10.1635068764908 |       23.3484046186122 |  103.712005872882 |           5.97486156297253 |   8.06412969513324 |                     14.7350137337019 |         18.6254101305985 |     28.627619239738 |      2.42462250134926 | 29.3632775890392 | 13.2115236434636 |          61.3504998920058 |          17.6377459215706 |   9.76118314800142 |         37.7626307576008 | 1918.30162500492 | 248.804986271785 |  9.89975382833156 |  1.66209987968102 |
+|  7 |       4.086059755039 |      28.2003212270307 |       50.9588157476719 |  203.864643721873 |           2.00418295187736 |   5.37146850468166 |                     43.7012136030534 |         28.5894765405155 |    19.1508658179457 |      5.68788002902314 |  45.400370207263 | 14.1250790139892 |          130.284522697653 |          50.8516074545834 |   12.1707128484913 |         14.8982335036034 | 109.710357589509 | 229.166582945829 |  5.25362814702676 |  7.38615221993735 |
+|  8 |     6.86516875996168 |      5.35075836271371 |       17.0866873632257 |  111.125418460388 |           3.47532869075245 |   3.66524324562298 |                     4.07023383137963 |         15.4310655709651 |    15.2383803556913 |      2.18225239640904 | 24.6896683748983 | 19.1725603307427 |          35.1602669870688 |          13.7908876231205 |   7.30282603286126 |         30.3640693182491 | 1367.19883140034 | 254.060904432543 |  8.80313228871176 |  4.24771190580784 |
+| 10 |     3.59690886871043 |       44.311176630816 |       51.0409970356772 |  190.566091191183 |          0.821742445377564 |   4.48039973661737 |                     54.0847379296692 |         41.8082138523749 |     13.414926501424 |      1.36048701551228 | 46.7768042669116 | 20.7370175718793 |          140.901386362421 |          51.7465671625091 |   5.71628554399682 |         31.7010545824733 | 907.289742716007 | 595.372952852531 |  8.32181502491446 | 0.964259289641308 |
+| 11 |     4.03847308425001 |      14.1546397857123 |       29.0848402982316 |  183.729488633547 |          0.493103334419495 |   6.98354767995563 |                      20.417999093447 |         31.8527710995865 |    11.6916238762667 |      2.49528354909315 | 37.2677470930401 | 12.4822682960904 |           79.176040705043 |          46.9674940633535 |      5.00526356066 |         44.3766524646939 | 1812.39943636314 | 297.250359127221 |   7.9656849026174 | 0.681678213334941 |
+| 15 |     3.78204909361323 |      13.4422813849678 |       18.8734483072275 |  110.037638702093 |           2.99975892212848 |   3.61659382408782 |                     7.13328539545674 |         29.9728491507471 |    7.48604302943171 |      1.02531028608356 | 24.6416773765096 | 19.2076077627388 |          45.0927636567739 |          42.1056978886004 |   4.53015923603005 |         40.0221754437986 |  2062.6922929688 | 320.256364033058 |  11.8460029657342 |  0.46916348435278 |
+|  3 |     14.1061240046444 |      2.41248016643406 |       7.91526878617632 |  65.7125335152011 |           3.21992978149207 |    22.863207295614 |                     3.54619672765061 |          14.103039060344 |    50.6609419796624 |      11.1158514235352 | 10.5859265216849 | 18.0101997950403 |           14.721485427464 |          5.53102397337405 |   21.9996440415174 |         6.33029560103037 | 1264.82066366564 | 1.61450625322501 |  2.41108126371011 |  36.5393020239395 |
+|  4 |     15.4813609928192 |      8.38264470483788 |       18.8049214181512 |   41.888351131347 |           22.5761342332244 |   16.9491425256008 |                     10.6054212689192 |         30.4166604883951 |     38.753258884989 |      4.35171439310585 | 19.6650207958745 | 30.7393045683532 |          51.1796552078986 |          29.4582722093191 |   11.0979769563542 |         4.36576324067651 | 932.767470850172 | 10.8574719917685 | 0.753937916691279 |  17.7570613074161 |
+|  9 |     9.06408457645127 |     0.971454923212576 |       7.88570937673076 |   27.373261017189 |           6.45187796349513 |   20.1726332936676 |                     0.91369640761166 |         12.2071156906719 |    42.2447592816247 |      7.92792380799274 | 12.9327832136168 | 29.7047884852389 |          14.0508831946182 |           10.181066061302 |   17.9862133156078 |         5.64873340878064 | 1283.47921103612 | 128.683075584418 |  1.83239832875712 |  22.0013923725006 |
+| 12 |     19.7319220935964 |      9.99648064296353 |       16.4216628173955 |  32.2829785922131 |           23.8108647000057 |   17.1909484384689 |                     8.41273026427396 |         6.18576220224722 |     35.149043281336 |      4.33359193798093 | 16.1421532061276 | 49.8559047522185 |          42.3134459185911 |          14.1273663613475 |   11.7663571194135 |         10.2969679879995 | 128.020192960756 | 152.119102999108 |  1.17740068767921 |  24.8472277507531 |
+| 13 |     16.0870771931618 |      11.3220466127798 |       13.6850347726927 |  49.6216859774051 |           10.7020429994878 |   19.7799694818111 |                     9.22472582974032 |         6.36191011427493 |    66.1800518608968 |       8.2208075043718 | 24.5629246443777 | 50.2271972757257 |          34.2884232647478 |           15.009021663326 |   19.5947178439124 |         17.6196148790115 | 131.006699574153 |  201.45924212504 |  2.49896900213013 |  27.7114325284927 |
+| 16 |     12.6837379155064 |      1.96025470847528 |       5.71290418166318 |  83.9365602217399 |            6.7048640929654 |   23.6022476357888 |                     1.13901726802695 |         13.2647020000932 |    39.3820487343644 |      10.0341756238631 | 7.43015645663292 |  48.953390632663 |          14.5480820895686 |          11.1891605272678 |    14.261724767186 |         22.1988672237979 | 156.636594234706 |  255.88721979561 |  1.07098714646585 |  14.6815856429194 |
+| 18 |     5.99555565497036 |      11.3052785846449 |       24.3737802021152 |   69.357091040794 |           9.48767187012127 |   20.2927634907371 |                     11.3254051361628 |         18.5043802942108 |    26.1568435991368 |       4.1780581243584 | 19.4465697585065 | 60.9806159040711 |          55.8129123962482 |          18.3888657774003 |   9.13429169340552 |         31.4825177083574 | 172.862817670307 | 230.975251589327 |  4.18824389665335 |  24.2193550960826 |
+|    |                      |                       |                        |                   |                            |                    |                                      |                          |                     |                       |                  |                  |                           |                           |                    |                          |                  |                  |                   |                   |
+
+#+name: meta-neg
+|    |       Malic acid |  Undecanoic acid |       Tryptophan | Tridecanoic acid | xi-7-Hydroxyhexadecanedioic acid | Leucyl-Tryptophan |  Floionolic acid | 9-Oxo-nonanoic acid | Enterodiol sulfate | 6-Ketoprostaglandin E1 | Prostaglandin E3 | 15-Keto-prostaglandin E2 | Prostaglandin E2 | Prostaglandin D2 | 11-Dehydro-thromboxane B2 |   Thromboxane B2 | Lithocholic acid glycine conjugate | Deoxycholylserine |
+|  5 | 260.699375983215 | 45.3841057446514 | 7.10186615736387 |  43.162985975278 |                 27.7644683733382 |  29.2820697759444 | 17.7448979535434 |    8.91771242802742 |   31.3041872007235 |       39.0201316406824 | 33.5814939776496 |         36.9264939138414 | 23.8030169547821 | 70.4678874424656 |          37.1352118963927 | 16.1903741280102 |                   9.67300382920333 |  6.24857421143803 |
+|  6 | 532.589656517069 | 10.6639536592136 | 7.11090856976055 | 14.6526994656237 |                 12.6975839963677 |  49.3670344133392 | 20.7345461963993 |    6.69050364715592 |   93.0502801335415 |       35.8016844666265 | 66.6780383145954 |         86.9069598213936 | 358.790462011407 | 208.118590691001 |          125.993126499147 | 33.0807942143391 |                   28.6498919300842 |  32.0732300671689 |
+|  7 | 253.089761740446 | 25.0642774410905 |  5.1372609475433 | 27.8191266744039 |                 46.3231578161197 |  90.7372954420744 | 39.0545377475541 |    11.9899914842712 |    296.67976408483 |       80.1118741585321 |  31.049033354727 |         47.2309036377651 | 223.588255358216 | 62.3013335537999 |          60.3921949349961 | 9.41574369950339 |                   62.3198138410922 |  24.0819983495633 |
+|  8 | 262.546530472719 | 2.91392774807013 | 3.48561189842701 | 4.10562907525903 |                 8.95871280486725 |  42.1053358922433 | 4.86461455087117 |    3.66370495552988 |   142.786415893814 |       18.6231844992301 | 73.7525457920129 |         83.9128098469731 | 331.631670442271 | 80.0077691805397 |          83.4798989690728 | 34.3973390324073 |                   72.8033616317055 |  60.2320519593289 |
+| 10 |  299.16939378278 |  47.775816547394 | 3.08728860363711 | 52.5511264888521 |                 67.0949823823717 |  62.1619689909977 | 51.4387259295214 |    17.6539831152768 |   36.8466718284724 |       103.056712476902 | 18.7047271715676 |         20.3635875441151 |  92.047522745191 | 26.1763160040817 |          23.0616395305257 | 3.03459400105391 |                   111.694893906688 |  96.6756321394154 |
+| 11 | 222.980123946768 | 16.3682460961244 |  3.4688954927867 | 19.6302477962723 |                 34.6559547776226 |  83.4075699653923 | 15.8333291345621 |    5.84560438129172 |   274.828426552208 |       47.3797124352512 | 103.919731145988 |         70.5084549418264 |  391.28249669426 |  83.222091747097 |          56.6300420072617 | 16.6410944275302 |                   69.8090051804258 |  94.0867242961228 |
+| 15 | 534.100710071907 | 12.0197594571812 | 5.61282731399948 | 7.97275113258451 |                 15.2804534446216 |  36.8993922452931 | 8.08175098882079 |    2.54202443910541 |   254.614980214698 |       26.3729845228155 | 89.1636220000827 |         67.3486709314022 | 178.293097540702 | 116.161943533497 |           88.700302491423 |   13.04021848395 |                   55.2319654451022 |  31.0952839047685 |
+|  3 | 509.771789533466 | 1.41625292249734 | 14.3126840950096 | 4.63572410445256 |                 3.24330225986598 |  25.9159309606626 | 1.97349342407035 |    1.00236829317745 |   6.26857923832167 |       10.1694046338107 | 49.1048567179522 |         28.8885494505306 | 121.655740943403 | 33.6221286405377 |          30.3636833441862 |  4.1683973656961 |                   11.6000709672912 |  6.12874129251359 |
+|  4 | 723.110156030178 | 5.40853154127914 | 15.0275198028364 | 6.57809768209679 |                 13.7823878471493 |  17.1938894878859 | 6.92957821850164 |    6.02114852231823 |   38.6970271811194 |        25.407692767302 | 19.7321562309228 |         17.0068191326859 | 45.2241187005247 | 21.4349454450155 |          31.3157656863728 | 4.32731954059016 |                   12.3636786691893 |  3.35426932518592 |
+|  9 | 700.036939111624 | 2.44374427782417 | 11.0598515812786 | 2.97326960745334 |                 3.20573383951954 |  11.7403427305873 | 1.29767789078823 |    1.47271211419502 |   43.9071404457349 |       10.0583012943922 |   43.54684804624 |         42.9084559884536 | 181.234662355433 | 44.3080868893125 |          41.8771940047099 | 6.76996851904234 |                   17.4162461093531 |  10.8860492318952 |
+| 12 |  1471.3925114225 | 5.55291309268415 | 16.2204940097802 | 6.09643387126622 |                 12.0548132331476 |  9.68638027942557 |  2.8173529661485 |     4.5986254844192 |   65.3712529591634 |       26.5232089690004 |  28.496839689419 |         35.8773906273257 | 130.137054787162 | 46.0874573029247 |          36.0428007366068 |  7.7924006598614 |                   28.9928417408844 |  5.62864445312608 |
+| 13 | 418.228552116927 | 5.24137727244866 |  9.2325545981184 | 9.21575009078204 |                 10.6877630782807 |  16.6003216508932 | 8.41701018886085 |     3.1448711580416 |   15.3430099791641 |       19.3409504821627 | 18.6444874772557 |         19.3601031108993 | 66.2319103337042 | 21.4915427095821 |          36.5848417980176 | 7.90425008669809 |                   30.0904437827084 |  44.7385521108499 |
+| 16 | 636.508369633382 | 2.57674309450993 | 4.35810057591986 |  2.8891764195999 |                 2.71329860753932 |  26.2041884312651 | 3.00777299877994 |    1.67927164087583 |   5.48523629763835 |       6.86824350311469 | 11.8092278356111 |          13.916339089211 | 19.6530619817724 | 12.9367228111768 |          18.6703608115594 | 1.38121970780337 |                   14.0371447779969 |  20.7089090881697 |
+| 18 | 417.893208768507 | 13.8341028440854 | 4.80034029033776 | 13.1176523463539 |                 21.3555585209663 |  26.6365514310064 | 15.2927473965831 |    4.49489242450915 |   66.3103544167297 |       46.8761706311912 | 28.2408023977673 |          23.285041096358 | 44.6537685383417 | 33.9647059708116 |           35.872344393016 | 3.80147271808378 |                   28.2281469601623 |  19.1046124421036 |
+
+#+name: phys
+| Sample # |   ID | Hair_Coat | Lactation | DIM |    BW |           DHI_MY |           Temp_C | RI_Avg |           PI_Avg |           Dia_Avg |        MBF_Total |          MBF_Avg |
+|        8 |  466 | P         |         4 | 174 |   596 | 31.8181818181818 | 36.5925925925926 | 0.5725 |           0.8725 |              1.45 | 9762.97130330809 | 4881.48565165404 |
+|       10 | 2041 | P         |         3 | 176 |   521 | 20.4545454545455 | 38.7222222222222 |  0.555 |            1.035 |             1.355 | 9187.04577464789 | 4593.52288732394 |
+|        4 | 2058 | R         |         2 | 114 |   485 | 21.3636363636364 | 35.4814814814815 |   0.64 | 1.12333333333333 |  1.25666666666667 | 11153.7412247946 | 5576.87061239731 |
+|        9 | 2068 | R         |         2 | 176 | 538.5 | 21.3636363636364 | 35.7962962962963 | 0.6475 |            1.235 |            1.1475 |  3312.7559618442 |  1656.3779809221 |
+|       16 | 2089 | R         |         2 | 182 |   479 | 16.8181818181818 | 37.8518518518518 |   0.63 | 1.16666666666667 | 0.823333333333333 |  1625.3256302521 | 812.662815126051 |
+|        3 | 2116 | R         |         2 | 209 | 492.5 | 19.0909090909091 | 39.1296296296296 | 0.6375 |           1.0725 |            1.2925 | 8667.54660464308 | 4333.77330232154 |
+|       11 | 2128 | P         |         2 | 174 |   592 | 24.5454545454545 | 38.3888888888889 | 0.6275 |           1.1825 |            1.6225 | 12910.3203225806 | 6455.16016129032 |
+|        6 | 2129 | P         |         2 | 180 | 570.5 |               20 | 38.6481481481481 |   0.66 | 1.13666666666667 |  1.21333333333333 | 5921.35555244363 | 2960.67777622182 |
+|        5 | 2171 | P         |         2 | 173 | 524.5 | 21.8181818181818 | 39.2407407407407 | 0.4375 |           0.6275 |            1.0975 | 10207.6951871658 | 5103.84759358289 |
+|       18 | 2179 | R         |         1 | 112 |   540 | 20.4545454545455 | 39.7777777777778 |   0.59 |           1.0125 |            1.1125 | 5133.00626959248 | 2566.50313479624 |
+|        7 | 2202 | P         |         2 | 175 |   501 | 20.9090909090909 | 37.5740740740741 | 0.5275 |             0.95 |              1.32 | 7686.11229946524 | 3843.05614973262 |
+|       13 | 2226 | R         |         1 | 199 | 486.5 | 18.1818181818182 | 36.3333333333333 | 0.6025 |            1.045 |            0.8825 | 3516.30685520205 | 1758.15342760103 |
+|       12 | 2273 | R         |         1 | 112 | 441.5 | 20.9090909090909 | 38.7592592592593 |   0.74 |           1.4325 |            1.0175 | 2568.20747492048 | 1284.10373746024 |
+|       15 | 2287 | P         |         1 |  92 | 467.5 | 26.8181818181818 | 39.4814814814815 | 0.5125 |           0.7375 |            1.0925 | 7591.77386237514 | 3795.88693118757 |
+
+#+begin_src R :session new :var meta=meta-pos :var phys=phys :var neg=meta-neg
+library(tidyverse)
+library(corrplot)
+library(cowplot)
+colnames(meta) <- meta[1,]
+meta <- meta[-1,]
+meta <- meta[-1,]
+colnames(phys) <- phys[1,]
+phys <- phys[-1,]
+
+rownames(phys) <- phys[,1]
+phys <- phys[,-c(1,2,3)]
+rownames(meta) <- meta[,1]
+meta <- meta[,-1]
+
+phys <- as.nu
+
+meta
+neg
+colnames(neg) <- neg[1,]
+neg <- neg[-1,]
+
+row.names(neg)<- neg[,1]
+neg <- neg[,-1]
+
+
+cor.neg <- cor(mutate_all(neg[order(row.names(neg)),], as.numeric),
+               mutate_all(phys[order(row.names(phys)),], as.numeric),
+               method = "spearman")
+cor.neg
+
+corrplot(cor(mutate_all(neg[order(row.names(neg)),], as.numeric),
+             mutate_all(phys[order(row.names(phys)),], as.numeric),
+             method = "spearman"), method='number'
+         )
+
+
+corrplot(cor(mutate_all(meta[order(row.names(meta)),], as.numeric),
+             mutate_all(phys[order(row.names(phys)),], as.numeric),
+             method = "spearman")
+         )
+
+install.packages('rstatix')
+#+end_src
+
+#+RESULTS:
