--- a/readme.org
+++ b/readme.org
@@ -907,7 +907,7 @@ loaded via a namespace (and not attached):
 
 * EdgeR w/o Outlier
 ** Load data
-#+begin_src R :session bovine.rm :results output
+#+begin_src R :session bovine.rm :results output ignore
 library(edgeR)
 library(statmod)
 library(tximport)
@@ -950,12 +950,12 @@ txi <- tximport(files, type = "salmon", tx2gene = tx2gene)
   #+begin_example
   Loading required package: limma
   data.table 1.14.6 using 4 threads (see ?getDTthreads).  Latest news: r-datatable.com
-  ── [1mAttaching packages[22m ────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────── tidyverse 1.3.2 ──
+  ── [1mAttaching packages[22m ──────────────────────────────────────────────────────────────── tidyverse 1.3.2 ──
   [32m✔[39m [34mggplot2[39m 3.4.0     [32m✔[39m [34mpurrr  [39m 1.0.1
   [32m✔[39m [34mtibble [39m 3.1.8     [32m✔[39m [34mdplyr  [39m 1.1.0
   [32m✔[39m [34mtidyr  [39m 1.3.0     [32m✔[39m [34mstringr[39m 1.5.0
   [32m✔[39m [34mreadr  [39m 2.1.3     [32m✔[39m [34mforcats[39m 1.0.0
-  ── [1mConflicts[22m ───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────── tidyverse_conflicts() ──
+  ── [1mConflicts[22m ─────────────────────────────────────────────────────────────────── tidyverse_conflicts() ──
   [31m✖[39m [34mdplyr[39m::[32mbetween()[39m   masks [34mdata.table[39m::between()
   [31m✖[39m [34mdplyr[39m::[32mfilter()[39m    masks [34mstats[39m::filter()
   [31m✖[39m [34mdplyr[39m::[32mfirst()[39m     masks [34mdata.table[39m::first()
@@ -1012,6 +1012,12 @@ y <- d[keep, ,keep.lib.sizes=F ] %>%
 
 #+end_src
 
+#+RESULTS:
+: Warning message:
+: In calcNormFactors.DGEList(.) :
+:   object contains offsets, which take precedence over library
+: sizes and norm factors (and which will not be recomputed).
+
 
 - unique genes
 
@@ -1061,6 +1067,31 @@ gather(-GeneID, key="library", value="count") %>%
   | 24 |    790886 | SL   |       4 |
   :end:
 
+
+- Unique Gene counts
+  #+begin_src R :session bovine.rm
+as.data.frame(txi$counts) %>%
+  rownames_to_column('gene') %>%
+  gather(-gene, key="library", value="count") %>%
+  left_join(meta.data) %>%
+  filter(count > 0) %>%
+  group_by(gene, group) %>%
+  count %>%
+  spread(group, n) %>%
+  filter(is.na(WT) | is.na(SL)) %>%
+  gather(-gene, key="type", value="samples") %>%
+  filter(!is.na(samples)) %>%
+  group_by(type, samples) %>%
+  count %>%
+  group_by(type) %>%
+  mutate(total=sum(n)) %>%
+  spread(samples, n)
+  #+end_src
+
+  | Group | Total |   1 |   2 |  3 |  4 | 5 | 6 |
+  |-------+-------+-----+-----+----+----+---+---|
+  | SL    |   592 | 424 | 119 | 33 | 12 | 3 | 1 |
+  | WT    |   401 | 307 |  67 | 19 |  6 | 1 | 1 |
 
 - Unique Gene Venn Diagram
   #+header: :results output file graphics :file venn.rm.png
